fixed cv and horizontal scroll issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1103,7 +1103,7 @@ a.contact-link:hover {
 
 @media (max-width: 1100px) {
 
-body {
+html, body {
   overflow-x: hidden;
 }
 
@@ -1717,7 +1717,7 @@ article.education {
 article.skills {
   height: 80vw;
   width: 80vw;
-  margin-top: 115vh;
+  margin-top: 125vh;
   position: absolute;
   display: block;
   margin-left: 3vw;
@@ -1726,7 +1726,7 @@ article.skills {
 article.info {
   height: 80vw;
   width: 80vw;
-  margin-top: 245vh;
+  margin-top: 255vh;
   position: absolute;
   float: right;
   display: block;
